# RAIN

./: README.md
AnonymousCobbleStone/: .env.example  .gitignore  .gitmodules  INSTALL.md  Makefile  README.md  docker-compose.yml  fblog.toml  log_levels.yaml  pyproject.toml  requirements.txt  run.sh
AnonymousCobbleStone/configs/: dfs-runner-config.json  heuristic-runner-config.json  prompt_format_config.json  simple-runner-config.json  tree_config_template.json
AnonymousCobbleStone/coq-projects/: README.md
AnonymousCobbleStone/coq-projects/basic/: BinNat.v  ExistsMin.v  FibTailEquivalent.v  FibTailEquivalent2.v  OnePlusN.v  README.md  SumTailEquivalent.v  _CoqProject
AnonymousCobbleStone/coq-projects/examples/: .gitignore  Examples.v  README.md
AnonymousCobbleStone/coq-projects/proverbot_fails/: len_rev_unchanged.v  list_forall2.v  rev_involutive.v
AnonymousCobbleStone/data/: .gitignore  COQGYM_DEV_COQHAMMER_RESULTS.json  COQGYM_DEV_PROVERBOT_RESULTS.json  COQGYM_DEV_SAMPLED_DATASET.pkl  COQGYM_DEV_SAMPLED_DATASET_RAW.txt  COQGYM_DEV_ZERO_SHOT_RESULTS.json  COQGYM_TEST_COQHAMMER_RESULTS.json  COQGYM_TEST_PERFECT_SUBGOALS.pkl  COQGYM_TEST_PROVERBOT_RESULTS.json  COQGYM_TEST_SAMPLED_DATASET.pkl  COQGYM_TEST_SAMPLED_DATASET_RAW.txt  COQGYM_TEST_ZERO_SHOT_RESULTS.json  COQ_BB5_DEV_SAMPLED_DATASET.csv  COQ_BB5_DEV_SAMPLED_DATASET.pkl  COQ_BB5_TEST_SAMPLED_DATASET.csv  COQ_BB5_TEST_SAMPLED_DATASET.pkl  COQ_WIGDERSON_DEV_PERFECT_SUBGOALS.pkl  COQ_WIGDERSON_DEV_SAMPLED_DATASET.pkl  COQ_WIGDERSON_DEV_SAMPLED_DATASET_RAW.txt  COQ_WIGDERSON_DEV_ZERO_SHOT_RESULTS.json  COQ_WIGDERSON_TEST_COQHAMMER_RESULTS.json  COQ_WIGDERSON_TEST_PERFECT_SUBGOALS.pkl  COQ_WIGDERSON_TEST_SAMPLED_DATASET.csv  COQ_WIGDERSON_TEST_SAMPLED_DATASET.pkl  COQ_WIGDERSON_TEST_ZERO_SHOT_RESULTS.json  PNV_ROCQLIB_DEV_SAMPLED_DATASET.csv  PNV_ROCQLIB_DEV_SAMPLED_DATASET.pkl  PNV_ROCQLIB_RETRYING_SAMPLED_DATASET.csv  PNV_ROCQLIB_RETRYING_SAMPLED_DATASET.pkl  PNV_ROCQLIB_TEST_SAMPLED_DATASET.pkl
AnonymousCobbleStone/doc/: TODO.md  installing_coqhammer.md  notable_examples.txt  schema.md  using_auto.md  vscoq.md
AnonymousCobbleStone/prompts/: prompting_for_a_single_tactic_after_reasoning.md  prompting_for_a_single_tactic_reasoning.md  prompting_for_a_whole_proof.md  prompting_for_a_whole_proof_with_reasoning.md  prompting_for_reasoning.md
AnonymousCobbleStone/proofs/: Comp_mon.md  Mcardinal_Scardinal.md  iteres_dom_ok.md  requestVoteReply_term_sanity_client_request.md  votesWithLog_update_elections_data.md
AnonymousCobbleStone/scripts/: goal-decomposition  make-switch.bash  next-tactic  on-shell-open.bash  on-shell-open.fish  run-in-cobble.bash  setup-cobble-env.bash  smoke-pnv-goal-decomposition.sh  summarize-goal-decomposition-run  summarize_deepseek_usage.py  summarize_goal_decomposition_run.py  zero-shot-pass-at-k
AnonymousCobbleStone/scripts/backup/: env_setup.sh
AnonymousCobbleStone/src/: config.py  coq_serapy_util.test.py  format_prompt.py  premise_selection.py  proof_obligation.py  proof_obligation.test.py  proof_script.py  proof_script.test.py  utils.py
AnonymousCobbleStone/src/agent/: __init__.py  agent.py  next_tactic.py  single_message_tool.py  zero_shot_tool.py
AnonymousCobbleStone/src/coq_serapy_util/: __init__.py  default_ltacs.py  feedback.py  feedback.test.py
AnonymousCobbleStone/src/dataset/: __init__.py  coq_bb5.py  coq_wigderson.py  coqgym_sampled.py  coqgym_test_set.json  dataset.py  fix_wigderson_proofs.ipynb  generate_intersection.ipynb  generate_test_perfect_prefix.ipynb  generate_wigderson_dev_perfect_prefix.ipynb  generate_wigderson_test_perfect_prefix.ipynb  intersection.bb5100.json  intersection.coqgym100.json  intersection.pnvrocqlib100.json  intersection.wigderson100.json  pnvrocqlib.py  sample_coq_bb5_proofs.ipynb  sample_pnvrocqlib_proofs.ipynb  sample_pnvrocqlib_retrying.ipynb  sample_wigderson_proofs.ipynb  sample_wigderson_proofs.py  sampled_values_to_lemma_locations.ipynb
AnonymousCobbleStone/src/environment/: __init__.py  actions.py  config.py  editor.py  editor.test.py  environment.py  environment.test.py
AnonymousCobbleStone/src/evaluation/: utils.py
AnonymousCobbleStone/src/evaluation/goal_decomposition/: __main__.py  example_wall_times.py  goal_decomposition.py  run_goal_decomposition_for_example.py  utils.py  wall_time_budget.py
AnonymousCobbleStone/src/evaluation/next_tactic/: __main__.py  next_tactic.py  task.py  (+1 more)
AnonymousCobbleStone/src/llm/: __init__.py  gpt.py  gpt.test.py  model_names.py  openai_compat.py  prompt.test.py  types.py  usage.py  utils.py
AnonymousCobbleStone/src/notebooks/: calculate_cobblestone_usage_cost_and_time.ipynb  calculate_usage_cost_and_time.ipynb  cobblestone-cumulative-chart.ipynb  compute_proof_length.ipynb  cumulative-CoqGym100.csv  cumulative-Wigderson100.csv
AnonymousCobbleStone/src/one_off_experiments/: PAIRWISE_RANKINGS.pkl  PAIRWISE_TEST_RESULT.pkl  RANKINGS.pkl  TEST_RESULT.pkl  cost.ipynb  gpt_lemma_ranking.ipynb  how_many_llm_generated_proofs_have_a_bullet.ipynb  schulze.py  test_search.py
AnonymousCobbleStone/src/strategy/: __init__.py  hammer.py  next_tactic.py  rollout.py  single_edit.py  tactician.py  types_renamed.py
AnonymousCobbleStone/src/tree_search/: __init__.py  node.py  tree_search.py
AnonymousCobbleStone/switches/: README.md  coq-8.10  coq-8.11  coq-8.12  coq-8.13  coq-8.18
AnonymousRAIN/SentenceScript/: .gitignore  Makefile  README.md  dune  dune-project  external-dependencies.txt  file-dependencies.txt  install-extras.sh  vsrocq-split-extras.opam
AnonymousRAIN/SentenceScript/dm/: completionItems.ml  dune.in  vsrocq_config.mlh
AnonymousRAIN/SentenceScript/language/: dune.in  hover.ml
AnonymousRAIN/SentenceScript/opam-profiles/: vsrocq-split-sentences-coq8.opam  vsrocq-split-sentences-minimal.opam  vsrocq-split-sentences-rocq9.opam
AnonymousRAIN/SentenceScript/protocol/: dune.in
AnonymousRAIN/SentenceScript/tools/: dune.in  vsrocq_split_sentences.ml
(+429 files in other folders)
