[tool.poetry]
name = "prompts-for-proofs"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.8"
python-dotenv = "^1.0.0"
black = "^23.7.0"
tiktoken = "^0.4.0"
click = "^8.1.6"
prompt-toolkit = "^3.0.39"
termcolor = "^2.3.0"
caribou = "^0.3.0"
tqdm = "^4.66.1"
sexpdata = "^1.0.1"
pampy = "^0.3.0"
coq-serapy = { git = "https://github.com/sakekasi/coq_serapy.git", rev = "5c2c6f1801311bba1fd60883eb238410cfefd3b6" }
word2number = "^1.1"
python-dateutil = "^2.8.2"
ipywidgets = "^8.1.1"
jupyter-client = "^8.5.0"
widgetsnbextension = "^4.0.9"
jupyter = "^1.0.0"
prettyprinttree = "^2.0.0"
python-json-logger = "^2.0.7"
jsonlog = "^4.0.0"
dataclasses-jsonschema = "^2.16.0"
toolong = "^1.0.3"
tqdm-multiprocess = { git = "https://github.com/sakekasi/tqdm-multiprocess.git", rev = "784b4ead21f8fd8eb59d8ab3451058f76434aa21" }
json-repair = "^0.12.2"
hypothesis = "^6.100.1"
torch = { version = "2.0.0", optional = true }

octoai = "^1.6.0"
anthropic = "^0.34.2"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"
pyserde = "^0.24.0"

[tool.poetry.extras]
local-models = ["torch"]

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.272"
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]

[tool.black]
line-length = 88
