opam-version: "2.0"
name: "vsrocq-split-sentences-minimal"
version: "0.0.0"
synopsis: "Self-contained vsrocq_split_sentences (Coq 8.188.20 only)"
description: """
Coq 8 profile: coq-core + coq-stdlib. Do not use in a Rocq 9-only switch.
"""
maintainer: "vsrocq contributors"
authors: ["The VsRocq development team"]
homepage: "https://github.com/rocq-prover/vsrocq"
bug-reports: "https://github.com/rocq-prover/vsrocq/issues"
license: "MIT"
depends: [
  "ocaml" {>= "4.14"}
  "dune" {>= "3.5"}
  "coq-core" {((>= "8.18" & < "8.21") | (= "dev"))}
  "coq-stdlib" {((>= "8.18" & < "8.21") | (= "dev"))}
  "base"
  "lsp" {>= "1.15"}
  "sel" {>= "0.6.0"}
  "yojson"
  "sexplib"
  "jsonrpc" {>= "1.15"}
  "result" {>= "1.5"}
  "ppx_optcomp"
  "ppx_import"
  "ppx_sexp_conv"
  "ppx_yojson_conv"
  "ppx_deriving"
  "ocamlfind"
]
conflicts: [
  "rocq-core"
]
build: [
  [ "%{make}%" "dune-files" ]
  [ "dune" "build" "--root" "." "-j" jobs "--profile" "dev" "tools/vsrocq_split_sentences.exe" ]
]
