opam-version: "2.0"
name: "vsrocq-split-sentences-minimal"
version: "0.0.0"
synopsis: "Self-contained vsrocq_split_sentences (Rocq 9.x only)"
description: """
Rocq 9 profile: depends only on rocq-core (not coq-core).
Use in a switch with rocq-core already pinned, or opam will install Rocq 9.
"""
maintainer: "vsrocq contributors"
authors: ["The VsRocq development team"]
homepage: "https://github.com/rocq-prover/vsrocq"
bug-reports: "https://github.com/rocq-prover/vsrocq/issues"
license: "MIT"
depends: [
  "ocaml" {>= "4.14"}
  "dune" {>= "3.5"}
  "rocq-core" {((>= "9.0+rc1" & < "9.3~") | (= "dev"))}
  "base"
  "lsp" {>= "1.15"}
  "sel" {>= "0.6.0"}
  "yojson"
  "sexplib"
  "jsonrpc" {>= "1.15"}
  "result" {>= "1.5"}
  "ppx_optcomp"
  "ppx_import"
  "ppx_sexp_conv"
  "ppx_yojson_conv"
  "ppx_deriving"
  "ocamlfind"
]
conflicts: [
  "coq-core"
  "coq"
]
build: [
  [ "%{make}%" "dune-files" "ROCQ=1" ]
  [ "dune" "build" "--root" "." "-j" jobs "--profile" "dev" "tools/vsrocq_split_sentences.exe" ]
]
